--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,7 +1,29 @@
-<div class="hero-image">
-  <div class="hero-text">
-    <h1>iPhone 9</h1>
-    <a [routerLink]="['/promotion']">Learn More</a>
-  </div>
+<div class="wraper">
+  <section class="img-section">
+    <div class="img-div">
+      <img src="./assets/welcome.jpg" alt="" class="img">
+    </div>
+  </section>
 </div>
-<div class="hero-image2"></div>
+<section class="about-section">
+  <div>
+    <img src="./assets/about.png" alt="About Image" class="about-img">
+  </div>
+  <div class="about-text">
+    <h2>About Us</h2>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+      Vitae at vel fugiat quae accusamus odio ipsam, maiores dignissimos
+      rerum tenetur voluptas, modi culpa a laboriosam veritatis odit sed tempore ex!
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+      Vitae at vel fugiat quae accusamus odio ipsam, maiores dignissimos
+      rerum tenetur voluptas, modi culpa a laboriosam veritatis odit sed tempore ex!
+    </p>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt distinctio
+      hic fugit consequuntur eveniet molestias dolor vel labore debitis expedita,
+      nemo impedit placeat illo aliquam asperiores pariatur reprehenderit nisi veniam.
+    </p>
+    <button mat-raised-button color="primary" (click)="navigate()">Contact us</button>
+  </div>
+</section>
