--- a/src/app/components/nav-bar/nav-bar.component.css
+++ b/src/app/components/nav-bar/nav-bar.component.css
@@ -55,6 +55,10 @@ body {
   background: #ccc;
 }
 
+mat-raised-button {
+  background-color: #673ab7;
+}
+
 @media screen and (max-width: 600px) {
   .topnav .search-container {
     float: none;
