--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -1,7 +1,8 @@
-.wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.price {
+  font-weight: bold;
+  font-size: large;
+  margin-left: 10px;
+  width: 200px;
 }
 
 table {
@@ -10,29 +11,33 @@ table {
   margin-top: 50px;
 }
 
-th, td {
-  border: 1px solid #ddd;
-  padding: 8px;
-  text-align: left;
-}
-
-th {
-  background-color: #f2f2f2;
-}
-
 img {
-  max-width: 100px;
-  max-height: 100px;
+  margin: 10px;
+  max-width: 150px;
+  max-height: 150px;
 }
 
-.chekcout {
+.demo-button-container {
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  padding-top: 30px;
+  flex-direction: row;
+  justify-content: end;
+  align-items: end;
+  margin: 20px;
+  margin-right: 270px;
 }
 
-.price {
-  font-weight: bold;
-  font-size: large;
+.delete-button {
+  margin-right: 20px;
+}
+
+.stepper-wrapper {
+  margin: 20px 250px;
+}
+
+.td {
+  width: 150px;
+}
+
+.column {
+  width: 150px;
 }
