--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,25 +1,57 @@
-<div class="wrapper">
-  <table>
-    <thead>
-      <tr>
-        <th>Image</th>
-        <th>Name</th>
-        <th>Price</th>
-        <th>Quantity</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let item of cartItems">
-        <td><img [src]="item.thumbnail" alt="Product Image" /></td>
-        <td>{{ item.title }}</td>
-        <td>{{ item.price * item.quantity | currency : "USD" : "symbol" }}</td>
-        <td>{{ item.quantity }}</td>
-      </tr>
-    </tbody>
+<div class="stepper-wrapper">
+  <table mat-table [dataSource]="cartItems" class="mat-elevation-z8">
+    <ng-container matColumnDef="image">
+      <th mat-header-cell *matHeaderCellDef>Image</th>
+      <td mat-cell *matCellDef="let item" class="column">
+        <img [src]="item.thumbnail" alt="Product Image" />
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let item" class="column">{{ item.title }}</td>
+    </ng-container>
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef>Price</th>
+      <td mat-cell *matCellDef="let item" class="column">
+        {{ item.price * item.quantity | currency : "USD" : "symbol" }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="quantity">
+      <th mat-header-cell *matHeaderCellDef>Quantity</th>
+      <div>
+      <td mat-cell *matCellDef="let item" class="column">
+        <button mat-icon-button (click)="decreaseQuantity(item)">
+        <mat-icon>remove_circle</mat-icon>
+        </button>
+         <span> {{ item.quantity }} </span>
+        <button mat-icon-button (click)="increaseQuantity(item)">
+        <mat-icon>add_circle</mat-icon>
+        </button>
+      </td>
+    </div>
+    </ng-container>
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let item" class="column">
+        <mat-icon (click)="deleteItem(item)">delete</mat-icon>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 </div>
-<div class="chekcout">
-  <button mat-raised-button color="primary" class="btn-3">Checkout</button>
+<div class="demo-button-container" color="primary">
+  <button
+    mat-raised-button
+    color="primary"
+    class="btn-3 delete-button"
+    (click)="deleteAllItems()"
+  >
+    Delete All
+  </button>
+  <button mat-raised-button color="primary" class="btn-3" (click)="checkout()" [disabled]="cartItems.length === 0">
+    Checkout
+  </button>
   <span class="price"
     >Total price: {{ getTotalPrice() | currency : "USD" : "symbol" }}</span
   >
